# X-keys_Linux

./: README.md  README.txt  configure  make_release.sh
HID-Reports/: README.md
SDK Sample/: README.md
SDK Sample/piehid/: PieHid32.c  PieHid32.h
SDK Sample/test/: CMakeLists.txt  test.c
SDK Sample/testgui/resources/: MainWindow.qrc  MainWindow.ui
SDK Sample/udev/: 90-xkeys.rules  README.md
SDK-Sample/: CMakeLists.txt  Makefile  README.md  configure
SDK-Sample/piehid/: CMakeLists.txt
SDK-Sample/test/: test.c
SDK-Sample/testgui/: MainWindow.cpp  MainWindow.h  main.cpp  pietestgui.desktop
SDK-Sample/udev/: 61-xkeys.rules
piehid/: CMakeLists.txt  PieHid32.c  PieHid32.h
test/: CMakeLists.txt  test.c
testgui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
testgui/resources/: MainWindow.ui
